2002-06-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMime.m: add a few consistency checks to raise an exception
	if we try to unparse a GSMimeDocument with inconsistent headers and
	content.

2002-06-19  Adam Fedor  <fedor@gnu.org>

	* Source/GSLocale.m (GSSetLocaleC): Only set locale for LC_CTYPE.

2002-06-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Cope with a URL where the path is missing.
	Check user, password, host, port parts for illegal characters.
	Thanks to bug report by Marco Manfredini <mldb@gmx.org>
	* Source/GSMime.m: add convenience method for setting document type.
	Fix error in recent change to base64 encoding.

2002-06-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimer.m: Retain target and user info on initialisation
	Release them on invalidation.  Ensure timer is invalidated on
	deallocation. Documented timer methods.
	Changes based on bug report by Andy Ruder <aeruder@yahoo.com>
	* Source/NSURL.m: Fixed one possible nul pointer indirection,
	and added some comments about the internal data structure.
	Handle percentage escape sequences in user, password, host and port
	even though MacOS-X only seems to do it for the user name and host.
	* Tools/plmerge.m: Fixed some crasher bugs where given bad arguments.

2002-06-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFTPURLHandle.m: simple implementation added
	* Source/NSURLHandle.m: Register GSFTPURLHandle for ftp scheme.
	* Source/GSHTTPURLHandle.m: modified so that data being read is
	reported periodically during the read proces rather than just at end.

2002-06-15  Adam Fedor  <fedor@gnu.org>

	* Source/NSProcessInfo.m: Include sys/fcntl for Solaris.

2002-06-14  Richard Frith-Macdonald <rfm@gnu.org>

	* config/pathxml.m4: Adjust path to headers.
	* Tools/gsdoc.m: Adjust path to headers.  Add warning about
	deprecation.
	Patch by e.sammer <eric@linuxstep.org>
	* Source/NSObject.m: Added some compatibility methods in a
	categpory of Object.